fix contrast on "play games" button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -338,7 +338,7 @@ button,
 .button {
 	display: inline-block;
 	border: solid 2px rgba(96, 16, 96, .1);
-	background: rgb(255, 128, 200);
+	background-color: #CC3D8E;
 	color: rgb(255, 255, 255);
 	font-size: 2em;
 	font-weight: 900;
